change overflow clip to hidden bc clip no longer used?

--- a/components/footer.module.scss
+++ b/components/footer.module.scss
@@ -18,7 +18,7 @@
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
     // clip so border radius cuts off corners of child buttons
-    overflow: clip;
+    overflow: hidden;
   }
 
   // iOS only (avoid persistent home bar)
